z-index fixes

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -78,7 +78,7 @@
     z-index: 5;
 }
 #group1 .parallax_layer--back{
-    background: orange;
+    background: grey;
 }
 
 #group2 {
@@ -92,5 +92,5 @@
     z-index: 4;
 }
 #group3 .parallax_layer--back{
-    background: orangered;
+    background: grey;
 }
